--- a/Ejercicios/CssMatch/index.html
+++ b/Ejercicios/CssMatch/index.html
@@ -12,9 +12,12 @@
 </head>
 <div>
   <div>
-    <header>
-      <div>
-        <div>
+    <header class="nav-wrapperheader index">
+      <div class="container nav-container">
+        <div class="nav-main">
+          <div class="nav-left">
+
+          </div>
           <a href="#" class="navigation"> Modules</a>
           <a href="#" class="navigation"> Legs</a>
           <a href="#" class="navigation"> Add-ons</a>
