--- a/Ejercicios/JScriptExercise/index.html
+++ b/Ejercicios/JScriptExercise/index.html
@@ -5,19 +5,19 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>Page Title</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" type="text/css" media="screen" href="main.css" />
-    <!-- <script src="app.js"></script> -->
+    <!-- <link rel="stylesheet" type="text/css" media="screen" href="main.css" /> -->
+    <script src="app.js"></script>
     <script>
         
 
-        holaMundo();
+        // holaMundo();
 
-        console.log(numero++);
+        // console.log(numero++);
 
-        function holaMundo(){
-            numero = 8;
-            console.log('Hola Mundo');
-        }
+        // function holaMundo(){
+        //     numero = 8;
+        //     console.log('Hola Mundo');
+        // }
         
     </script>
 </head>
