--- a/Ejercicios/primer-js/test.html
+++ b/Ejercicios/primer-js/test.html
@@ -64,6 +64,6 @@
   </footer>
 
 </body>
-<script type="text/javascript" src="FunctionsSample"></script>
+<script type="text/javascript" src="promisesSample.js"></script>
 
 </html>
